muncher/programs/test-cases/error-6.mnc.stderr
error: variable `a` is already defined in this scope
  --> test.mnc:2:5
  |
1 | let a = 1;
  |     - previous definition here
2 | let a = 1;
  |     ^ variable `a` is already defined in this scope

